Treating UKB as a single collection in DataDirectory & MarkerData.